<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Seven</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="play">播放</string>
    <string name="random">随便听听</string>
    <string name="title_activity_play">MainActivity</string>
    <string name="next">下一曲</string>
    <string name="previous">上一曲</string>
    <string name="stop">暂停</string>
    <string name="resume">继续</string>
</resources>
